--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
         /* The cancel button is only shown in input mode */
         #cancelSearchBtn {
             display: none;
-            padding: 0 12px; /* Make it a bit wider than default */
+            padding: 4px 10px; /* More compact padding */
+            font-size: 0.9em; /* Smaller font */
         }
         #linksList {
             list-style-type: none;
@@ -486,22 +487,13 @@
         }
 
         /* --- Custom Scrollbar for Lists --- */
-        #customPromptColorList::-webkit-scrollbar, /* Specificity for theme picker */
-        .favorites-list::-webkit-scrollbar,
-        .delete-links-list::-webkit-scrollbar,
-        .theme-color-list::-webkit-scrollbar {
+        .scrollable-list-dialog::-webkit-scrollbar {
             width: 6px;
         }
-        #customPromptColorList::-webkit-scrollbar-track,
-        .favorites-list::-webkit-scrollbar-track,
-        .delete-links-list::-webkit-scrollbar-track,
-        .theme-color-list::-webkit-scrollbar-track {
+        .scrollable-list-dialog::-webkit-scrollbar-track {
             background: transparent;
         }
-        #customPromptColorList::-webkit-scrollbar-thumb,
-        .favorites-list::-webkit-scrollbar-thumb,
-        .delete-links-list::-webkit-scrollbar-thumb,
-        .theme-color-list::-webkit-scrollbar-thumb {
+        .scrollable-list-dialog::-webkit-scrollbar-thumb {
             background-color: var(--icon-color);
             border-radius: 3px;
             border: 2px solid var(--bg-color); /* Match list background for padding effect */
