--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             display: flex;
             align-items: center; /* Vertically align with input */
         }
+        /* When an input is active, hide the action bar to reduce clutter */
+        .main-view.input-mode-active .actions-bar {
+            display: none;
+        }
         .search-section {
             display: flex;
             gap: 4px;
@@ -487,13 +491,19 @@
         }
 
         /* --- Custom Scrollbar for Lists --- */
-        .scrollable-list-dialog::-webkit-scrollbar {
+        .favorites-list::-webkit-scrollbar,
+        .delete-links-list::-webkit-scrollbar,
+        .theme-color-list::-webkit-scrollbar {
             width: 6px;
         }
-        .scrollable-list-dialog::-webkit-scrollbar-track {
+        .favorites-list::-webkit-scrollbar-track,
+        .delete-links-list::-webkit-scrollbar-track,
+        .theme-color-list::-webkit-scrollbar-track {
             background: transparent;
         }
-        .scrollable-list-dialog::-webkit-scrollbar-thumb {
+        .favorites-list::-webkit-scrollbar-thumb,
+        .delete-links-list::-webkit-scrollbar-thumb,
+        .theme-color-list::-webkit-scrollbar-thumb {
             background-color: var(--icon-color);
             border-radius: 3px;
             border: 2px solid var(--bg-color); /* Match list background for padding effect */
@@ -1557,6 +1567,7 @@
         cancelSearchBtn.addEventListener('click', () => {
             searchInput.value = '';
             clearSearchBtn.style.display = 'none';
+            cancelSearchBtn.style.display = 'none';
             // Re-render the full list immediately
             searchHandler('');
             // Blurring the input will trigger the focusout event, which hides the input-mode UI
