--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             --selection-bg-color: rgba(255, 112, 67, 0.15); /* A tint of the primary color */
             --selection-border-color: var(--primary-color);
             --checkbox-border-color: #555;
+            --button-font-color: #FFFFFF; /* Default to white, will be updated by theme */
             --checkbox-checked-bg: var(--primary-color);
         }
         *, *::before, *::after {
@@ -164,7 +165,7 @@
             padding: 8px 8px;
             border: none;
             background-color: var(--primary-color);
-            color: white;
+            color: var(--button-font-color);
             border-radius: 8px;
             cursor: pointer;
             font-size: 1em;
@@ -678,6 +679,39 @@
             /* Hide the element completely when there is no error message to show */
             min-height: 0;
         }
+        .dialog-input-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+        .dialog-input-wrapper input {
+            width: 100%;
+            padding-right: 30px; /* Space for clear button */
+        }
+        .dialog-input-wrapper button {
+            position: absolute;
+            right: 8px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: transparent;
+            border: none;
+            color: var(--icon-color);
+            cursor: pointer;
+            padding: 0;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .dialog-input-wrapper button:hover {
+            color: var(--font-color);
+            filter: none;
+        }
+        .dialog-input-wrapper button svg {
+            width: 20px;
+            height: 20px;
+        }
     </style>
 </head>
 <body>
@@ -725,7 +759,10 @@
             <p class="custom-prompt-title">Change Theme</p>
             <p id="themeDialogError" class="custom-prompt-error"></p>
             <ul id="themeColorList" class="theme-color-list scrollable-list-dialog" tabindex="-1"></ul>
-            <input type="text" id="themeDialogInput" placeholder="Or type a name/hex here">
+            <div class="dialog-input-wrapper">
+                <input type="text" id="themeDialogInput" placeholder="Or type a name/hex here">
+                <button id="clearThemeInputBtn" title="Clear color" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"></path></svg></button>
+            </div>
             <div class="custom-prompt-actions">
                 <button id="themeDialogReset" class="secondary">Rabbit Me!</button>
                 <div class="custom-prompt-actions-right">
@@ -791,6 +828,7 @@
         const themeDialogError = document.getElementById('themeDialogError');
         const themeColorList = document.getElementById('themeColorList');
         const themeDialogInput = document.getElementById('themeDialogInput');
+        const clearThemeInputBtn = document.getElementById('clearThemeInputBtn');
         const themeDialogOk = document.getElementById('themeDialogOk');
         const themeDialogCancel = document.getElementById('themeDialogCancel');
         const themeDialogReset = document.getElementById('themeDialogReset');
@@ -1784,7 +1822,7 @@
             });
         }
 
-        const defaultTheme = { name: 'Rabbit', colors: { '--primary-color': '#ff7043', '--bg-color': '#0d0d0d', '--item-bg': '#1c1c1c', '--border-color': '#2a2a2a', '--icon-color': '#7a7a7a' } };
+        const defaultTheme = { name: 'Rabbit', colors: { '--primary-color': '#ff7043', '--bg-color': '#0d0d0d', '--item-bg': '#1c1c1c', '--border-color': '#2a2a2a', '--icon-color': '#7a7a7a', '--button-font-color': '#FFFFFF' } };
 
         function colorNameToRgb(name) {
             const el = document.createElement('div');
@@ -1844,12 +1882,18 @@
             const [r, g, b] = rgb;
             if (r < 30 && g < 30 && b < 30) return null;
             const [h, s, l] = rgbToHsl(r, g, b);
+
+            // Calculate perceived brightness to determine button text color
+            const luminance = (r * 0.299 + g * 0.587 + b * 0.114) / 255;
+            const buttonTextColor = luminance > 0.5 ? '#000000' : '#FFFFFF';
+
             return {
                 '--primary-color': `rgb(${r}, ${g}, ${b})`,
                 '--bg-color': hslToRgb(h, s * 0.5, 0.07),
                 '--item-bg': hslToRgb(h, s * 0.6, 0.12),
                 '--border-color': hslToRgb(h, s * 0.6, 0.18),
-                '--icon-color': hslToRgb(h, s * 0.3, 0.5)
+                '--icon-color': hslToRgb(h, s * 0.3, 0.5),
+                '--button-font-color': buttonTextColor
             };
         }
 
@@ -1928,6 +1972,21 @@
                 scrollToTop();
             };
 
+            themeDialogInput.addEventListener('input', () => {
+                const colorInput = themeDialogInput.value;
+                clearThemeInputBtn.style.display = colorInput.length > 0 ? 'flex' : 'none';
+                if (themeDialogError.textContent) {
+                    themeDialogError.textContent = '';
+                }
+            });
+
+            clearThemeInputBtn.addEventListener('click', () => {
+                themeDialogInput.value = '';
+                clearThemeInputBtn.style.display = 'none';
+                themeDialogInput.focus();
+                triggerHaptic();
+            });
+
             themeDialogOk.addEventListener('click', async () => {
                 const colorInput = themeDialogInput.value.trim();
                 if (colorInput) {
@@ -1936,8 +1995,8 @@
                     if (!applyResult.success) {
                         themeDialogError.textContent = applyResult.error;
                     } else {
-                        // On successful application, close the dialog.
-                        closeDialog();
+                        // On successful application, clear error and keep dialog open for preview.
+                        themeDialogError.textContent = '';
                     }
                 } else {
                     // If the input is empty, "OK" simply closes the dialog,
