--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         }
         .theme-color-list {
              /* Transitions for smooth collapse when keyboard is active */
-            transition: opacity 0.2s ease-in-out, max-height 0.2s ease-in-out, margin 0.2s ease-in-out, padding 0.2s ease-in-out, border 0.2s ease-in-out;
+            transition: opacity 0.15s ease-out, max-height 0.15s ease-out, margin 0.15s ease-out, padding 0.15s ease-out, border 0.15s ease-out;
         }
 
         /* --- Custom Scrollbar for Lists --- */
