Updated website content

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             max-height: 45vh; /* Increased height for better visibility */
         }
         .theme-color-list {
-            max-height: 44vh; /* Increased height to show more colors */
+            max-height: 46vh; /* Increased height to show more colors */
         }
         .favorite-list-item {
             display: flex;
@@ -611,14 +611,14 @@
         }
         .custom-prompt-dialog {
             background-color: var(--item-bg); 
-            padding: 10px; /* Further reduced padding */
+            padding: 8px; /* Squeezed padding */
             border-radius: 8px;
             border: 1px solid var(--border-color);
             width: 100%;
             max-width: 320px;
             display: flex;
             flex-direction: column; 
-            gap: 6px; /* Further reduced gap for a more compact look */
+            gap: 4px; /* Squeezed gap */
             transition: padding 0.2s ease-in-out, gap 0.2s ease-in-out; /* Smooth transition */
         }
         .custom-prompt-dialog .custom-prompt-title {
