--- a/index.html
+++ b/index.html
@@ -191,14 +191,22 @@
         }
         /* Secondary button style for non-primary actions like 'Cancel' */
         button.secondary {
-            background-color: var(--item-bg);
-            border: 1px solid var(--border-color);
-            color: var(--icon-color);
+            background-color: transparent;
+            border: 1px solid var(--primary-color);
+            color: var(--primary-color);
         }
         button.secondary:hover {
-            background-color: #2c2c2c;
-            color: var(--font-color);
+            background-color: var(--selection-bg-color);
             filter: none; /* Override the default button hover */
+        }
+        /* Special class for the 'Rabbit Me!' button to always use the default orange */
+        button.rabbit-default {
+            background-color: #ff7043;
+            color: #FFFFFF;
+            border: 1px solid transparent;
+        }
+        button.rabbit-default:hover {
+            filter: brightness(1.15);
         }
         /* The cancel button is only shown in input mode */
         #cancelSearchBtn {
@@ -764,7 +772,7 @@
                 <button id="clearThemeInputBtn" title="Clear color" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"></path></svg></button>
             </div>
             <div class="custom-prompt-actions">
-                <button id="themeDialogReset" class="secondary">Rabbit Me!</button>
+                <button id="themeDialogReset" class="rabbit-default">Rabbit Me!</button>
                 <div class="custom-prompt-actions-right">
                     <button id="themeDialogCancel" class="secondary">Cancel</button>
                     <button id="themeDialogOk">OK</button>
@@ -777,7 +785,7 @@
         <div class="custom-prompt-dialog">
             <div class="delete-options">
                 <label><input type="radio" name="delete-mode" value="all"> Delete All Links</label>
-                <label><input type="radio" name="delete-mode" value="keep-favs"> Delete All Except Favorite</label>
+                <label><input type="radio" name="delete-mode" value="keep-favs"> Delete All Except Favorites</label>
                 <label><input type="radio" name="delete-mode" value="selected" checked> Select Links to Delete:</label>
             </div>
             <ul id="deleteLinksList" class="delete-links-list scrollable-list-dialog" tabindex="-1">
