Updated website content

--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
             filter: none;
         }
         /* Secondary button style for non-primary actions like 'Cancel' */
-        button.secondary {
+        body button.secondary {
             background-color: transparent;
             border: 1px solid var(--primary-color);
             color: var(--primary-color);
         }
-        button.secondary:hover {
+        body button.secondary:hover {
             background-color: var(--selection-bg-color);
             filter: none; /* Override the default button hover */
         }
